--- a/bienvenida/inventario/templates/inventario/base.html
+++ b/bienvenida/inventario/templates/inventario/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>
     {% block title %}
     {% endblock %}
@@ -15,7 +16,7 @@
 
     {% block main %}
     {% endblock %}
-  
+
     {% block footer %}
     {% endblock %}
 
